Fixed FindBugs error